--- a/reCaptcha_invisible_/reCaptcha_invisible_.csproj
+++ b/reCaptcha_invisible_/reCaptcha_invisible_.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ReCaptchaResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
